Update and rename index.html to index1.html

--- a/index1.html
+++ b/index1.html
@@ -38,7 +38,7 @@
 
 <section id="about" class="about">
     <div class="img-about">
-        <img src="images/profilepic.jpg" height="350px" width="250px">
+        <img src="profilepic.jpg" height="350px" width="250px">
     </div>
     <div class="content">
         <h1>About Me</h1>
@@ -59,7 +59,7 @@
         <table class="edutab">
             <tr>
                 <td><div class="Btech">
-            <img src="images/btech.jpg" width="300">
+            <img src="btech.jpg" width="300">
             <h4>B.tech in Information 
                 Technology
             </h4>
@@ -72,7 +72,7 @@
             </div></td>
         
         <td><div class="clg">
-            <img src="images/college.png" width="300">
+            <img src="college.png" width="300">
             <h4>Intermediate in MPC Course</h4>
             <h3><b>December 2019-2021</b></h3>
             <h3><b>Relevant course work</b>
@@ -87,7 +87,7 @@
                 <div class="clg">
                     <div class="h4">
                         <div class="h3">
-                <img src="images/schoolpic" height="60" width="300">
+                <img src="schoolpic" height="60" width="300">
                 <h4>Primary studies</h4>
                 <h3><b>Passed out 2019</b></h3>
                 <h3><b>Relevant course work</b>
@@ -112,11 +112,11 @@
             <td>
                 <div class="languages">
                     <h2><b>Languages and Databases</b></h2>
-                    <p><img src="images/python.png"height="100" width="150" >
-                        <img src="images/html.png" height="100" width="150"style="padding-left:10px" >
-                        <img src="images/c++.png" height="80" width="100" style="padding-left:20px">   
-                        <img src="images/c.png" height="80" width="100" style="padding-left:20px" > 
-                        <img src="images/sql.png" height="80" width="100" style="padding-left:20px" > 
+                    <p><img src="python.png"height="100" width="150" >
+                        <img src="html.png" height="100" width="150"style="padding-left:10px" >
+                        <img src="c++.png" height="80" width="100" style="padding-left:20px">   
+                        <img src="c.png" height="80" width="100" style="padding-left:20px" > 
+                        <img src="sql.png" height="80" width="100" style="padding-left:20px" > 
                          
                     </p>
                 </div>
@@ -126,10 +126,10 @@
             <td>
                 <div class="languages">
                     <h2><b>Frame works</b></h2>
-                    <p><img src="images/numpy.png"height="100" width="150">
-                        <img src="images/panda.png" height="100" width="150" style="padding-left:10px">
-                        <img src="images/mat.png" height="100" width="150" style="padding-left:10px">   
-                        <img src="images/sea.png" height="100" width="150" style="padding-left:10px">   
+                    <p><img src="numpy.png"height="100" width="150">
+                        <img src="panda.png" height="100" width="150" style="padding-left:10px">
+                        <img src="mat.png" height="100" width="150" style="padding-left:10px">   
+                        <img src="sea.png" height="100" width="150" style="padding-left:10px">   
                     </p>
                 </div>
             </td>
@@ -144,24 +144,24 @@
             <table>
             <tr>
                 <td>
-                <img src="images/certificate1.jpg" height="200px" width="250px"style="margin-left:1px">
+                <img src="certificate1.jpg" height="200px" width="250px"style="margin-left:1px">
                 </td>
                 <td>
-                <img src="images/certificate2.jpg" height="200px" width="250px" style="margin-left:100px">
+                <img src="certificate2.jpg" height="200px" width="250px" style="margin-left:100px">
                 </td>
                 <td>
-                <img src="images/certificate3.jpg" height="200px" width="250px" style="margin-left:100px">
+                <img src="certificate3.jpg" height="200px" width="250px" style="margin-left:100px">
                 </td>
             </tr>
             <tr>
                 <td>
-                    <img src="images/certificate4.jpg" height="200px" width="250px" style="margin-top:20px;margin-left:1px">
+                    <img src="certificate4.jpg" height="200px" width="250px" style="margin-top:20px;margin-left:1px">
                     </td>
                     <td>
-                    <img src="images/certificate5.jpg" height="200px" width="250px"style="margin-top:20px;margin-left:100px">
+                    <img src="certificate5.jpg" height="200px" width="250px"style="margin-top:20px;margin-left:100px">
                     </td>
                     <td>
-                    <img src="images/certificate6.jpg" height="200px" width="250px" style="margin-top:20px;margin-left:100px">
+                    <img src="certificate6.jpg" height="200px" width="250px" style="margin-top:20px;margin-left:100px">
                     </td>
             </tr>
             </table>
